@@ -4,10 +4,11 @@ import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.annotation.WorkerThread;
 
-import com.annimon.stream.Stream;
-
 import org.signal.core.util.logging.Log;
+import org.signal.libsignal.protocol.NoSessionException;
+import org.thoughtcrime.securesms.database.GroupTable;
 import org.thoughtcrime.securesms.database.SignalDatabase;
+import org.thoughtcrime.securesms.database.model.RecipientRecord;
 import org.thoughtcrime.securesms.jobmanager.Job;
 import org.thoughtcrime.securesms.jobmanager.JsonJobData;
 import org.thoughtcrime.securesms.jobmanager.impl.DecryptionsDrainedConstraint;
@@ -30,6 +31,8 @@ import org.whispersystems.signalservice.api.push.exceptions.ServerRejectedExcept
 import java.io.IOException;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class ProfileKeySendJob extends BaseJob {
 
@@ -81,22 +84,24 @@ public class ProfileKeySendJob extends BaseJob {
    */
   @WorkerThread
   public static @Nullable ProfileKeySendJob create(long threadId, boolean queueLimits) {
-    Recipient conversationRecipient = SignalDatabase.threads().getRecipientForThreadId(threadId);
+    RecipientId conversationRecipientId = SignalDatabase.threads().getRecipientIdForThreadId(threadId);
 
-    if (conversationRecipient == null) {
+    if (conversationRecipientId == null) {
       Log.w(TAG, "Thread no longer valid! Aborting.");
       return null;
     }
 
-    if (conversationRecipient.isPushV2Group()) {
+    RecipientRecord conversationRecipient = SignalDatabase.recipients().getRecord(conversationRecipientId);
+
+    if (conversationRecipient.getGroupId() != null && conversationRecipient.getGroupId().isV2()) {
       throw new AssertionError("Do not send profile keys directly for GV2");
     }
 
-    List<RecipientId> recipients = conversationRecipient.isGroup() ? Stream.of(RecipientUtil.getEligibleForSending(Recipient.resolvedList(conversationRecipient.getParticipantIds())))
-                                                                           .map(Recipient::getId)
-                                                                           .toList()
-                                                                   : Stream.of(conversationRecipient.getId())
-                                                                           .toList();
+    List<RecipientId> recipients = conversationRecipient.getGroupId() != null
+                                   ? RecipientUtil.getEligibleForSending(Recipient.resolvedList(SignalDatabase.groups().getGroupMemberIds(conversationRecipient.getGroupId(), GroupTable.MemberSet.FULL_MEMBERS_INCLUDING_SELF)))
+                                                  .stream()
+                                                  .map(Recipient::getId).collect(Collectors.toList())
+                                   : Stream.of(conversationRecipient.getId()).collect(Collectors.toList());
 
     recipients.remove(Recipient.self().getId());
 
@@ -133,16 +138,12 @@ public class ProfileKeySendJob extends BaseJob {
       throw new NotPushRegisteredException();
     }
 
-    if (threadId > 0) {
-      Recipient conversationRecipient = SignalDatabase.threads().getRecipientForThreadId(threadId);
-
-      if (conversationRecipient == null) {
-        Log.w(TAG, "Thread no longer present");
-        return;
-      }
+    if (threadId > 0 && SignalDatabase.threads().getRecipientIdForThreadId(threadId) == null) {
+      Log.w(TAG, "Thread no longer present");
+      return;
     }
 
-    List<Recipient> destinations = Stream.of(recipients).map(Recipient::resolved).toList();
+    List<Recipient> destinations = recipients.stream().map(Recipient::resolved).collect(Collectors.toList());
     List<Recipient> completions  = deliver(destinations);
 
     for (Recipient completion : completions) {
@@ -188,14 +189,14 @@ public class ProfileKeySendJob extends BaseJob {
 
   }
 
-  private List<Recipient> deliver(@NonNull List<Recipient> destinations) throws IOException, UntrustedIdentityException {
+  private List<Recipient> deliver(@NonNull List<Recipient> destinations) throws IOException, UntrustedIdentityException, NoSessionException {
     SignalServiceDataMessage.Builder dataMessage = SignalServiceDataMessage.newBuilder()
                                                                            .asProfileKeyUpdate(true)
                                                                            .withTimestamp(System.currentTimeMillis())
                                                                            .withProfileKey(Recipient.self().resolve().getProfileKey());
 
     List<SendMessageResult>    results       = GroupSendUtil.sendUnresendableDataMessage(context, null, destinations, false, ContentHint.IMPLICIT, dataMessage.build(), false, null);
-    ProofRequiredException     proofRequired = Stream.of(results).filter(r -> r.getProofRequiredFailure() != null).findLast().map(SendMessageResult::getProofRequiredFailure).orElse(null);
+    ProofRequiredException     proofRequired = results.stream().filter(r -> r.getProofRequiredFailure() != null).reduce((a,b) -> b).map(SendMessageResult::getProofRequiredFailure).orElse(null);
 
     GroupSendJobHelper.SendResult groupResult = GroupSendJobHelper.getCompletedSends(destinations, results);
 
